--- a/views/beInstructor.ejs
+++ b/views/beInstructor.ejs
@@ -136,6 +136,7 @@
     <button>Plan your curriculum</button>
     <button>Record your video</button>
     <button>Launch your course</button>
+    <button>your your </button>
   </div>
 
 
